tests/baselines/reference/parserErrorRecoveryIfStatement6.errors.txt
==== tests/cases/compiler/parserErrorRecoveryIfStatement6.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b) {
            ~
!!! parserErrorRecoveryIfStatement6.ts(3,9): error TS2095: Cannot find name 'a'.
      }
      public f2() {
      ~~~~~~
!!! parserErrorRecoveryIfStatement6.ts(5,3): error TS1008: Unexpected token; 'statement' expected.
      }
      f3() {
      }
    }
    